# savanna-smell-detector

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
rules/: clone-and-modify.md  eager-test.md  env-dependent-skip.md  t_wada.md
src/: config.rs  main.rs
src/agent/: mod.rs  prefilter.rs  rule_loader.rs  runner.rs  types.rs
src/core/: detector.rs  mod.rs  registry.rs  smell.rs  smell_allow.rs
src/detectors/: assertion_roulette.rs  commented_out_test.rs  conditional_logic.rs  empty_test.rs  fragile_test.rs  giant_test.rs  ignored_test.rs  magic_number.rs  missing_assertion.rs  mod.rs  no_test.rs  redundant_print.rs  silent_skip.rs  sleepy_test.rs
src/languages/: mod.rs  rust.rs  shell.rs
src/reporters/: console.rs  json.rs  markdown.rs  mod.rs
tests/fixtures/: smelly_tests.bats  smelly_tests.rs  smelly_tests.sh
