[package]
name = "savanna-smell-detector"
version = "0.1.0"
edition = "2021"
description = "Test smell detector for multiple languages — Can you say the same in front of t_wada?"
authors = ["fruitriin"]
license = "Apache-2.0"
repository = "https://github.com/fruitriin/savanna-smell-detector"
homepage = "https://github.com/fruitriin/savanna-smell-detector"
keywords = ["testing", "lint", "code-quality", "test-smell"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
syn = { version = "2", features = ["full", "parsing", "visit"] }
proc-macro2 = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quote = "1"
glob = "0.3"
colored = "2"
serde_yaml = "0.9"
